--- a/Klike/Sources/Controllers/KLLoginViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginViewController.xib
@@ -49,7 +49,7 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9fj-3v-bGl" userLabel="NavBarBg">
-                    <color key="backgroundColor" red="0.34901960780000002" green="0.35686274509999999" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.42745098039215684" green="0.45882352941176469" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="2HV-j3-TUO">
                             <variation key="widthClass=compact" constant="64"/>
@@ -118,7 +118,7 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YVx-sv-vFC" userLabel="JoinPanelBg">
-                    <color key="backgroundColor" red="0.34901960780000002" green="0.35686274509999999" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.42745098039215684" green="0.45882352941176469" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i64-uT-yg5" userLabel="JoinPanel">
                     <rect key="frame" x="0.0" y="400" width="600" height="200"/>
@@ -209,7 +209,7 @@
                         </textField>
                         <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pmi-Zj-jbf">
                             <rect key="frame" x="16" y="48" width="568" height="2"/>
-                            <color key="backgroundColor" red="0.45882352941176469" green="0.46666666666666667" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.53725490196078429" green="0.5725490196078431" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2" id="DuN-6N-4o6">
                                     <variation key="widthClass=compact" constant="1"/>
@@ -262,7 +262,7 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gZ-5Z-O5m">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                            <color key="backgroundColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.47058823529411764" green="0.50588235294117645" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="zYO-9F-Qo0"/>
                             </constraints>
@@ -312,7 +312,7 @@
                                     </variation>
                                 </imageView>
                             </subviews>
-                            <color key="backgroundColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.47058823529411764" green="0.50588235294117645" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="centerX" secondItem="E4E-So-uLb" secondAttribute="centerX" id="MbY-sz-Q7h"/>
                                 <constraint firstAttribute="centerY" secondItem="E4E-So-uLb" secondAttribute="centerY" id="R7V-sp-bif"/>
