Fix explore screen design

--- a/Klike/Sources/Controllers/KLExploreTopUserViewCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/KLExploreTopUserViewCollectionViewCell.xib
@@ -13,7 +13,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="112" height="122"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IO2-fD-o23" customClass="PFImageView">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="event_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="IO2-fD-o23" customClass="PFImageView">
                         <rect key="frame" x="8" y="13" width="96" height="96"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="96" id="Ffh-Kb-Mkt"/>
@@ -33,4 +33,7 @@
             <point key="canvasLocation" x="266" y="384"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="event_pic_placeholder" width="320" height="240"/>
+    </resources>
 </document>
