--- a/Klike/Interfaces/ExplorePeopleCell.xib
+++ b/Klike/Interfaces/ExplorePeopleCell.xib
@@ -99,7 +99,7 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="EFe-gI-BHt" secondAttribute="trailing" constant="8" id="0Ul-oM-m2z"/>
+                    <constraint firstAttribute="trailing" secondItem="EFe-gI-BHt" secondAttribute="trailing" constant="16" id="0Ul-oM-m2z"/>
                     <constraint firstItem="7DW-WG-MR7" firstAttribute="centerY" secondItem="pXx-BP-wps" secondAttribute="centerY" constant="-1" id="1hY-pQ-1SO"/>
                     <constraint firstItem="7DW-WG-MR7" firstAttribute="trailing" secondItem="pXx-BP-wps" secondAttribute="trailing" constant="-8" id="5AT-aM-rMX"/>
                     <constraint firstItem="A32-oX-yG6" firstAttribute="top" secondItem="TM1-mR-jbR" secondAttribute="top" constant="16" id="Fi3-BJ-hZn"/>
