--- a/Klike/Interfaces/ExplorePeopleTopCell.xib
+++ b/Klike/Interfaces/ExplorePeopleTopCell.xib
@@ -2,33 +2,82 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ExplorePeopleTopCell" rowHeight="172" id="fSD-1w-vw0" customClass="KLExplorePeopleTopCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fSD-1w-vw0" id="akn-1Z-xl2">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="He0-xn-KKK" userLabel="userPhoto" customClass="PFImageView">
-                        <rect key="frame" x="16" y="16" width="32" height="32"/>
+                        <rect key="frame" x="16" y="16" width="56" height="56"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="32" id="c8z-mp-uQb"/>
-                            <constraint firstAttribute="height" constant="32" id="iVS-5M-vuP"/>
+                            <constraint firstAttribute="width" constant="56" id="c8z-mp-uQb"/>
+                            <constraint firstAttribute="height" constant="56" id="iVS-5M-vuP"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Christofer Riot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgd-14-riw" userLabel="userName">
-                        <rect key="frame" x="56" y="14" width="158" height="17"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                        <rect key="frame" x="88" y="25" width="126" height="19"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" red="0.1137254902" green="0.12549019610000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ct-uk-U2z">
+                        <rect key="frame" x="219" y="23" width="85" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="27" id="G90-Tz-gIx"/>
+                            <constraint firstAttribute="width" constant="85" id="wIT-Ss-XWh"/>
+                            <constraint firstAttribute="width" constant="64" id="zKM-Ad-fHB"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                        <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="1"/>
+                        <inset key="imageEdgeInsets" minX="-6" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <state key="normal" title="Following" image="ic_following" backgroundImage="btn_small_filled">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="G90-Tz-gIx"/>
+                                <exclude reference="zKM-Ad-fHB"/>
+                            </mask>
+                        </variation>
+                    </button>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="LAx-YB-rtx">
+                        <rect key="frame" x="0.0" y="72" width="320" height="112"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="112" id="9I3-Vh-vas"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Fno-DA-oXI">
+                            <size key="itemSize" width="107" height="112"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="fSD-1w-vw0" id="THY-B3-XHd"/>
+                            <outlet property="delegate" destination="fSD-1w-vw0" id="MhN-W0-KAt"/>
+                        </connections>
+                    </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hpu-OF-2AT">
+                        <rect key="frame" x="0.0" y="184" width="320" height="4"/>
+                        <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="8" id="OXf-DE-Bbm"/>
+                            <constraint firstAttribute="height" constant="4" id="YVG-8d-Ja9"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="OXf-DE-Bbm"/>
+                            </mask>
+                        </variation>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qfV-FI-PlK">
-                        <rect key="frame" x="56" y="33" width="46" height="14"/>
+                        <rect key="frame" x="88" y="52" width="46" height="14"/>
                         <attributedString key="attributedText">
                             <fragment content="4 ">
                                 <attributes>
@@ -48,10 +97,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="explore_slash" translatesAutoresizingMaskIntoConstraints="NO" id="Xji-Ef-nmS">
-                        <rect key="frame" x="107" y="37" width="3" height="8"/>
+                        <rect key="frame" x="139" y="56" width="3" height="8"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btB-IH-3kF">
-                        <rect key="frame" x="116" y="33" width="59" height="14"/>
+                        <rect key="frame" x="148" y="52" width="59" height="14"/>
                         <attributedString key="attributedText">
                             <fragment content="6">
                                 <attributes>
@@ -70,79 +119,29 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ct-uk-U2z">
-                        <rect key="frame" x="219" y="20" width="85" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="27" id="G90-Tz-gIx"/>
-                            <constraint firstAttribute="width" constant="85" id="wIT-Ss-XWh"/>
-                            <constraint firstAttribute="width" constant="64" id="zKM-Ad-fHB"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
-                        <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="1"/>
-                        <inset key="imageEdgeInsets" minX="-6" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <state key="normal" title="Following" image="ic_following" backgroundImage="btn_small_filled">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="zKM-Ad-fHB"/>
-                                <exclude reference="G90-Tz-gIx"/>
-                            </mask>
-                        </variation>
-                    </button>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="LAx-YB-rtx">
-                        <rect key="frame" x="0.0" y="59" width="320" height="112"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="112" id="9I3-Vh-vas"/>
-                        </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Fno-DA-oXI">
-                            <size key="itemSize" width="107" height="112"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <connections>
-                            <outlet property="dataSource" destination="fSD-1w-vw0" id="THY-B3-XHd"/>
-                            <outlet property="delegate" destination="fSD-1w-vw0" id="MhN-W0-KAt"/>
-                        </connections>
-                    </collectionView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hpu-OF-2AT">
-                        <rect key="frame" x="0.0" y="171" width="320" height="8"/>
-                        <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="8" id="OXf-DE-Bbm"/>
-                            <constraint firstAttribute="height" constant="8" id="YVG-8d-Ja9"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="OXf-DE-Bbm"/>
-                            </mask>
-                        </variation>
-                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="qfV-FI-PlK" firstAttribute="centerY" secondItem="Xji-Ef-nmS" secondAttribute="centerY" constant="-1" id="3qj-Da-RVP"/>
                     <constraint firstItem="qfV-FI-PlK" firstAttribute="trailing" secondItem="Xji-Ef-nmS" secondAttribute="trailing" constant="-8" id="OrP-Be-Foz"/>
                     <constraint firstAttribute="bottom" secondItem="hpu-OF-2AT" secondAttribute="bottom" id="Qjr-Ro-Zv7"/>
-                    <constraint firstItem="qfV-FI-PlK" firstAttribute="top" secondItem="Mgd-14-riw" secondAttribute="bottom" constant="2" id="SjI-Cf-dbT"/>
+                    <constraint firstItem="qfV-FI-PlK" firstAttribute="top" secondItem="Mgd-14-riw" secondAttribute="bottom" constant="8" id="SjI-Cf-dbT"/>
                     <constraint firstItem="hpu-OF-2AT" firstAttribute="leading" secondItem="akn-1Z-xl2" secondAttribute="leading" id="TFx-77-xTV"/>
                     <constraint firstItem="btB-IH-3kF" firstAttribute="leading" secondItem="Xji-Ef-nmS" secondAttribute="trailing" constant="6" id="UuN-66-IHb"/>
                     <constraint firstItem="He0-xn-KKK" firstAttribute="top" secondItem="akn-1Z-xl2" secondAttribute="top" constant="16" id="VJc-Su-xed"/>
                     <constraint firstItem="Mgd-14-riw" firstAttribute="leading" secondItem="qfV-FI-PlK" secondAttribute="leading" id="VZI-0f-EIR"/>
-                    <constraint firstItem="Mgd-14-riw" firstAttribute="leading" secondItem="He0-xn-KKK" secondAttribute="trailing" constant="8" id="VtP-D8-0g4"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="7Ct-uk-U2z" secondAttribute="trailing" constant="8" id="b4E-XE-adG"/>
+                    <constraint firstItem="Mgd-14-riw" firstAttribute="leading" secondItem="He0-xn-KKK" secondAttribute="trailing" constant="16" id="VtP-D8-0g4"/>
+                    <constraint firstAttribute="trailing" secondItem="7Ct-uk-U2z" secondAttribute="trailing" constant="16" id="b4E-XE-adG"/>
                     <constraint firstItem="hpu-OF-2AT" firstAttribute="top" secondItem="LAx-YB-rtx" secondAttribute="bottom" id="bvf-XF-TJf"/>
                     <constraint firstAttribute="trailing" secondItem="hpu-OF-2AT" secondAttribute="trailing" id="ecs-2R-dqx"/>
                     <constraint firstAttribute="trailing" secondItem="LAx-YB-rtx" secondAttribute="trailing" id="fQH-qN-CQ6"/>
-                    <constraint firstItem="LAx-YB-rtx" firstAttribute="top" secondItem="He0-xn-KKK" secondAttribute="bottom" priority="999" constant="11" id="kwM-BG-iyj"/>
+                    <constraint firstItem="LAx-YB-rtx" firstAttribute="top" secondItem="He0-xn-KKK" secondAttribute="bottom" priority="999" id="kwM-BG-iyj"/>
                     <constraint firstItem="Xji-Ef-nmS" firstAttribute="leading" secondItem="qfV-FI-PlK" secondAttribute="trailing" constant="5" id="nex-TK-2qi"/>
                     <constraint firstItem="He0-xn-KKK" firstAttribute="leading" secondItem="akn-1Z-xl2" secondAttribute="leading" constant="16" id="nlW-DX-aif"/>
                     <constraint firstItem="btB-IH-3kF" firstAttribute="centerY" secondItem="qfV-FI-PlK" secondAttribute="centerY" id="pdc-tR-QIf"/>
                     <constraint firstItem="Mgd-14-riw" firstAttribute="centerY" secondItem="He0-xn-KKK" secondAttribute="centerY" constant="-9.5" id="ruz-aV-n77"/>
+                    <constraint firstItem="Mgd-14-riw" firstAttribute="baseline" secondItem="7Ct-uk-U2z" secondAttribute="baseline" constant="1" id="sXj-op-489"/>
                     <constraint firstItem="7Ct-uk-U2z" firstAttribute="leading" secondItem="Mgd-14-riw" secondAttribute="trailing" constant="5" id="tTe-Pu-VSy"/>
                     <constraint firstItem="LAx-YB-rtx" firstAttribute="leading" secondItem="akn-1Z-xl2" secondAttribute="leading" id="tyI-ih-uKo"/>
-                    <constraint firstItem="7Ct-uk-U2z" firstAttribute="centerY" secondItem="He0-xn-KKK" secondAttribute="centerY" id="x4k-eg-kPr"/>
                     <constraint firstItem="btB-IH-3kF" firstAttribute="leading" secondItem="Xji-Ef-nmS" secondAttribute="leading" constant="9" id="yQG-Rb-7lg"/>
                 </constraints>
             </tableViewCellContentView>
