--- a/Klike/Interfaces/EventListCell.xib
+++ b/Klike/Interfaces/EventListCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -45,14 +45,21 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dec 23, 5 miles — North Beach" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMJ-12-IUi">
-                        <rect key="frame" x="127" y="44" width="178" height="14"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMJ-12-IUi">
+                        <rect key="frame" x="127" y="34" width="178" height="24"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Dec 23, 5 miles — North Beach">
+                                <attributes>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="12" name="HelveticaNeue"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="24"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="baf-Xn-054">
-                        <rect key="frame" x="128" y="72" width="49" height="24"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="baf-Xn-054">
+                        <rect key="frame" x="127" y="72" width="49" height="24"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
                         <color key="tintColor" red="0.015686274510000001" green="0.58039215690000001" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,13 +70,13 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.3k going" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etY-wC-SRK">
-                        <rect key="frame" x="253" y="133" width="52" height="13"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
+                        <rect key="frame" x="252" y="133" width="53" height="14"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="11"/>
                         <color key="textColor" red="0.41176470590000003" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YDR-5w-Ogu" userLabel="attendies">
-                        <rect key="frame" x="126" y="128" width="125" height="24"/>
+                        <rect key="frame" x="128" y="128" width="122" height="24"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="UMe-hi-bEB" customClass="PFImageView">
                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -114,7 +121,7 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iQq-T3-SIE">
-                        <rect key="frame" x="126" y="128" width="179" height="24"/>
+                        <rect key="frame" x="128" y="128" width="177" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="C8u-Lp-Qcr"/>
                             <constraint firstAttribute="width" constant="289" id="Rvl-VA-kOY"/>
@@ -137,22 +144,22 @@
                     <constraint firstItem="etY-wC-SRK" firstAttribute="centerY" secondItem="YDR-5w-Ogu" secondAttribute="centerY" id="2gl-Ut-ISZ"/>
                     <constraint firstItem="dak-jT-Avk" firstAttribute="top" secondItem="glh-rJ-Y96" secondAttribute="topMargin" constant="9" id="7FJ-cy-JT9"/>
                     <constraint firstAttribute="trailing" secondItem="r4D-EI-S5B" secondAttribute="trailing" id="7Rc-Mm-fRC"/>
-                    <constraint firstItem="AMJ-12-IUi" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="15" id="9Yw-h1-nNV"/>
                     <constraint firstItem="YDR-5w-Ogu" firstAttribute="centerY" secondItem="iQq-T3-SIE" secondAttribute="centerY" id="Ab6-qc-sfG"/>
                     <constraint firstAttribute="trailing" secondItem="AMJ-12-IUi" secondAttribute="trailing" constant="15" id="AoA-9L-X04"/>
                     <constraint firstAttribute="bottom" secondItem="r4D-EI-S5B" secondAttribute="bottom" id="DM0-HA-oju"/>
                     <constraint firstItem="etY-wC-SRK" firstAttribute="leading" secondItem="YDR-5w-Ogu" secondAttribute="trailing" constant="2" id="EbI-TF-nry"/>
                     <constraint firstItem="YkB-xl-zeO" firstAttribute="leading" secondItem="glh-rJ-Y96" secondAttribute="leading" id="F47-BR-RmF"/>
+                    <constraint firstItem="dak-jT-Avk" firstAttribute="leading" secondItem="AMJ-12-IUi" secondAttribute="leading" constant="-1" id="Il5-cH-jW3"/>
                     <constraint firstAttribute="trailingMargin" secondItem="dak-jT-Avk" secondAttribute="trailing" constant="15" id="IlA-M3-7Pu"/>
                     <constraint firstItem="baf-Xn-054" firstAttribute="top" secondItem="AMJ-12-IUi" secondAttribute="bottom" constant="14" id="L46-gA-ADi"/>
+                    <constraint firstItem="baf-Xn-054" firstAttribute="leading" secondItem="AMJ-12-IUi" secondAttribute="leading" id="Nm9-O0-a7J"/>
                     <constraint firstAttribute="trailing" secondItem="etY-wC-SRK" secondAttribute="trailing" constant="15" id="Q5D-aq-bq6"/>
                     <constraint firstItem="r4D-EI-S5B" firstAttribute="top" secondItem="YkB-xl-zeO" secondAttribute="bottom" id="bpe-Bb-j5d"/>
                     <constraint firstItem="dak-jT-Avk" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="14" id="fjJ-98-vJq"/>
-                    <constraint firstItem="YDR-5w-Ogu" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="14" id="onZ-L7-xot"/>
+                    <constraint firstItem="YDR-5w-Ogu" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="16" id="onZ-L7-xot"/>
                     <constraint firstItem="r4D-EI-S5B" firstAttribute="leading" secondItem="glh-rJ-Y96" secondAttribute="leading" id="p4Y-3A-8I4"/>
-                    <constraint firstItem="AMJ-12-IUi" firstAttribute="top" secondItem="dak-jT-Avk" secondAttribute="bottom" constant="3" id="pwT-ab-f0O"/>
+                    <constraint firstItem="AMJ-12-IUi" firstAttribute="top" secondItem="dak-jT-Avk" secondAttribute="bottom" constant="-7" id="pwT-ab-f0O"/>
                     <constraint firstItem="r4D-EI-S5B" firstAttribute="top" secondItem="YDR-5w-Ogu" secondAttribute="bottom" constant="16" id="tZz-y6-fdW"/>
-                    <constraint firstItem="baf-Xn-054" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="16" id="wQT-CR-eqt"/>
                     <constraint firstItem="etY-wC-SRK" firstAttribute="trailing" secondItem="iQq-T3-SIE" secondAttribute="trailing" id="yHe-NY-ntu"/>
                     <constraint firstItem="YkB-xl-zeO" firstAttribute="top" secondItem="glh-rJ-Y96" secondAttribute="top" id="yK2-8y-Olf"/>
                 </constraints>
